--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,6 +15,10 @@
 	<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"> </script>
 	<!-- Load the coco-ssd model. -->
 	<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"> </script>
+	
+	<script src="https://accounts.google.com/gsi/client" async defer></script>
+	<script src="https://unpkg.com/jwt-decode/build/jwt-decode.js"></script>
+
 </head>
 
 <body>
