--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,26 +1,24 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-	<title>Svelte app</title>
+    <title>Svelte app</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="stylesheet" href="/global.css" />
+    <link rel="stylesheet" href="/build/bundle.css" />
 
-	<script defer src='/build/bundle.js'></script>
-	<!-- Load TensorFlow.js. This is required to use coco-ssd model. -->
-	<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"> </script>
-	<!-- Load the coco-ssd model. -->
-	<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"> </script>
-	
-	<script src="https://accounts.google.com/gsi/client" async defer></script>
-	<script src="https://unpkg.com/jwt-decode/build/jwt-decode.js"></script>
+    <script defer src="/build/bundle.js"></script>
+    <!-- Load TensorFlow.js. This is required to use coco-ssd model. -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+    <!-- Load the coco-ssd model. -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
 
-</head>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://unpkg.com/jwt-decode/build/jwt-decode.js"></script>
+  </head>
 
-<body>
-</body>
+  <body></body>
 </html>
